cluster/apps/infrastructure/netbox/graphite/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphite
  namespace: infrastructure
spec:
  selector:
    app.kubernetes.io/component: netbox
    app.kubernetes.io/instance: netbox
    app.kubernetes.io/name: netbox
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
